--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ body {
     align-items: center;
 }
 
-.candidate {
+.title-candidate {
     height: 50px;
     display: flex;
     justify-content: center;
